open link to new tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>Instruction for using the site:</h3>
     <p>To input your data, separate Name, Email Address, Business Phone Number and Mobile Phone Number by comma</p>
     <p>Example: John Doe, johndoe@example.com, 2121234567, 2121234568</p>
-    <p>You can use this <a href="https://ezecastleintegration.sharepoint.com/:x:/r/sites/transition-management-private/Shared%20Documents/Project%20Progress%20-%20Joey/User_Validation.xlsx?d=w3e210b7a0a36478e878883dbe6100b83&csf=1&web=1&e=v4afaw">User Validation excel template</a></p>
+    <p>You can use this <a href="https://ezecastleintegration.sharepoint.com/:x:/r/sites/transition-management-private/Shared%20Documents/Project%20Progress%20-%20Joey/User_Validation.xlsx?d=w3e210b7a0a36478e878883dbe6100b83&csf=1&web=1&e=v4afaw" target="_blank">User Validation excel template</a></p>
     <div id="correctListForm">
         <h3>Correct List</h3>
         <textarea placeholder="Enter data for Correct List"></textarea>
